--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,7 @@
     <%= f.error_notification %>
 
     <div class="form-inputs">
-      <%= f.input :photo %>
+      <%= f.input :photo, label: "Profile Picture"%>
       <%= f.input :photo_cache, as: :hidden %>
       <%= f.input :email, required: true, autofocus: true %>
       <div class="row">
