--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
-        <%= f.input :photo %>
+        <%= f.input :photo, label: "Profile Picture" %>
         <%= f.input :photo_cache, as: :hidden %>
         <div class="row">
           <div class="col">
@@ -17,8 +17,9 @@
           <div class="col">
             <%= f.input :last_name, required: true, autofocus: true, input_html: { autocomplete: "last_name" }%>
           </div>
-        <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
+        </div>
         <%= f.input :username, required: true, autofocus: true, input_html: { autocomplete: "username" }%>
+        <%= f.input :city, required: true, autofocus: true, input_html: { autocomplete: "city" }%>
         <%= f.input :email, required: true, autofocus: true, input_html: { autocomplete: "email" }%>
         <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length), input_html: { autocomplete: "new-password" } %>
         <%= f.input :password_confirmation, required: true, input_html: { autocomplete: "new-password" } %>
